
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Farmer" 
    
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vw" 
        android:textSize="8pt"
        />

    <Spinner
        android:id="@+id/splandscl"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:minHeight="40dip"
        android:paddingLeft="10dip" 
        android:entries="@array/landscale"
        android:prompt="@string/ls"
        />

    <Spinner
        android:id="@+id/spclimate"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_above="@+id/splandscl"
        android:layout_alignLeft="@+id/splandscl"
        android:layout_marginBottom="19dp"
        android:minHeight="40dip"
        android:paddingLeft="10dip"
        android:entries="@array/climate"
        android:prompt="@string/cl"
         />

    <TextView
        android:id="@+id/tvclimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spclimate"
        android:layout_alignLeft="@+id/tvsoil"
        android:text="@string/cl" 
        android:textSize="6pt"/>

    <TextView
        android:id="@+id/tvlandscale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvlandsize"
        android:layout_alignLeft="@+id/tvclimate"
        android:text="@string/ls" 
        android:textSize="6pt"/>

    <Spinner
        android:id="@+id/spsoil"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_alignBottom="@+id/tvsoil"
        android:layout_alignLeft="@+id/spclimate"
        android:minHeight="40dip"
        android:paddingLeft="10dip"
        android:entries="@array/soil"
        android:prompt="@string/sl"
         />

    <TextView
        android:id="@+id/tvsoil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spclimate"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="24dp"
        android:text="@string/sl" 
        android:textSize="6pt"/>

    <TextView
        android:id="@+id/tvlandsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvlandscale"
        android:layout_below="@+id/splandscl"
        android:layout_marginTop="38dp"
        android:text="@string/lsz"
        android:textSize="6pt" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvlandsize"
        android:layout_alignLeft="@+id/splandscl"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvlandsize"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:text="@string/gt"
        android:textSize="10pt" />

</RelativeLayout>